<?xml version="1.0"?>
<package format="2">
  <name>pose_with_covariance_array</name>
  <version>0.0.0</version>
  <description>
    Defines the msg and rviz plugin for pose with covariance array
  </description>

  <maintainer email="sunke.polyu@gmail.com">Ke Sun</maintainer>
  <license>BSD 3-Clause</license>

  <author>Dave Hershberger</author>
  <author>David Gossow</author>
  <author>Josh Faust</author>
  <author>Ke Sun</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>rviz</depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugin_description.xml"/>
  </export>
</package>
